@@ -1,7 +1,7 @@
-#cat=others;type=string;label=Path to script:Set the path and script name to update the installtion fro CVS/SVN. This script should be able to run as cron.
+#cat=others;type=string;label=Path to script:Set the path and script name to update the installtion from CVS/SVN. This script must be executable by web server.
 code=
 #cat=others;type=boolean;label=Enable Email:Set if email should be selectable and send after code execution. This is an easy way to inform other developer that changes should be downloaded.
-enableEmail=1
+enableEmail=0
 #cat=others;type=string;label=Recipients:Set recipients email, comma separated. Provide the developers' email
 recipients=
 #cat=others;type=string;label=Default Message:Set the default message text
@@ -14,10 +14,10 @@ defaultSubject=SVN Update
 tar_path = tar
 # cat=others; type=string; label=Backup Dir: Relative path to backup files. Here you can set a different folder for backup files.
 backup_path = typo3temp\
-# cat=others; type=string; label=Excluded types: Comma separated list of excluded files types that will not be backed up. (Linux, UNIX only)
+# cat=others; type=string; label=Excluded types: Comma separated list of excluded files types that will not be transferred by download or deployment up. (Linux, UNIX only)
 excluded =
-#cat=others;type=boolean;label=Enable Deploy:If set deploy to an other server via ftp is supported
-enableDeploy=1
+#cat=others;type=boolean;label=Enable Deploy:If set deploy to an other server (remote) via ftp is supported
+enableDeploy=
 # cat=others; type=string; label=FTP Server:set the url for the ftp server where extensions should be deployed
 ftpServer=
 # cat=others; type=string; label=FTP Password: set the ftp password
