@@ -3,7 +3,7 @@
 ########################################################################
 # Extension Manager/Repository config file for ext: "fdfx_svn"
 #
-# Auto generated 13-07-2007 09:18
+# Auto generated 22-03-2008 15:56
 #
 # Manual updates:
 # Only the data in the array - anything else is removed by next write.
@@ -23,14 +23,14 @@ $EM_CONF[$_EXTKEY] = array(
 	'module' => 'mod1',
 	'state' => 'stable',
 	'internal' => '',
-	'uploadfolder' => 0,
+	'uploadfolder' => 1,
 	'createDirs' => '',
 	'modify_tables' => '',
 	'clearCacheOnLoad' => 0,
 	'lockType' => '',
 	'author_company' => '4Many Services',
 	'version' => '1.0.0',
-	'_md5_values_when_last_written' => 'a:13:{s:9:"ChangeLog";s:4:"41da";s:10:"README.txt";s:4:"8b31";s:21:"ext_conf_template.txt";s:4:"a09f";s:12:"ext_icon.gif";s:4:"021e";s:14:"ext_tables.php";s:4:"8229";s:14:"mod1/clear.gif";s:4:"cc11";s:13:"mod1/conf.php";s:4:"dbce";s:14:"mod1/index.php";s:4:"6260";s:18:"mod1/locallang.php";s:4:"9ffa";s:22:"mod1/locallang_mod.php";s:4:"e7ee";s:19:"mod1/moduleicon.gif";s:4:"021e";s:19:"doc/wizard_form.dat";s:4:"48aa";s:20:"doc/wizard_form.html";s:4:"9142";}',
+	'_md5_values_when_last_written' => 'a:13:{s:9:"ChangeLog";s:4:"5077";s:10:"README.txt";s:4:"8b31";s:21:"ext_conf_template.txt";s:4:"bfcd";s:12:"ext_icon.gif";s:4:"021e";s:14:"ext_tables.php";s:4:"8229";s:19:"doc/wizard_form.dat";s:4:"48aa";s:20:"doc/wizard_form.html";s:4:"9142";s:14:"mod1/clear.gif";s:4:"cc11";s:13:"mod1/conf.php";s:4:"dbce";s:14:"mod1/index.php";s:4:"9eec";s:18:"mod1/locallang.xml";s:4:"21f2";s:22:"mod1/locallang_mod.xml";s:4:"6d5d";s:19:"mod1/moduleicon.gif";s:4:"021e";}',
 	'constraints' => array(
 		'depends' => array(
 		),
